fixed capitalization on page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Lolapi</h1>
+        <h1>LoLAPI</h1>
         <p>API for LoL stats. </p>
       </header>
 
